--- a/Client/package.json
+++ b/Client/package.json
@@ -9,7 +9,11 @@
   "type": "module",
   
   "scripts": {
+  
+    
   "dev": "vite",
+  
+    
   "build": "vite build",
   
     
@@ -23,6 +27,18 @@
   "dependencies": {
   
     
+  "@emotion/react": "^11.11.1",
+  
+    
+  "@emotion/styled": "^11.11.0",
+  
+    
+  "@material-tailwind/react": "^2.1.4",
+  
+    
+  "@mui/material": "^5.14.18",
+  
+    
   "axios": "^1.6.2",
   
     
@@ -31,14 +47,24 @@
     
   "flowbite-react": "^0.6.4",
   
-
+    
+  "framer-motion": "^10.16.5",
+  
+    
   "lucide-react": "^0.292.0",
   
+    
+  "notistack": "^2.0.8",
+  
+    
   "react": "^18.2.0",
+  
     
   "react-dom": "^18.2.0",
   
+    
   "react-router-dom": "^6.19.0"
+  
   },
   
   "devDependencies": {
