--- a/Server/.env
+++ b/Server/.env
@@ -1,4 +1,4 @@
-PORT = 3000
-# DATA_BASE =  "mongodb://127.0.0.1:27017/todoApp"
+PORT=3000
+DATA_BASE=mongodb+srv://subashotherp11:RT5pD4k7cxxGg83g@todo.2qx1bp4.mongodb.net/todoApp
 
-# mongodb://localhost:27017
+
