--- a/Server/vercel.json
+++ b/Server/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
 
-  "builds": [{ "src": "*.js", "use": "@vercel/node" }],
+  "builds": [{ "src": "./Server.js", "use": "@vercel/node" }],
   "routes": [
     {
       "src": "/(.*)",
