--- a/Client/package.json
+++ b/Client/package.json
@@ -1,109 +1,42 @@
 {
-  
   "name": "todo-app-react",
-  
   "private": true,
-  
   "version": "0.0.0",
-  
   "type": "module",
-  
   "scripts": {
-  
-    
-  "dev": "vite",
-  
-    
-  "build": "vite build",
-  
-    
-  "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-  
-    
-  "preview": "vite preview"
-  
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
-  
   "dependencies": {
-  
-    
-  "@emotion/react": "^11.11.1",
-  
-    
-  "@emotion/styled": "^11.11.0",
-  
-    
-  "@material-tailwind/react": "^2.1.4",
-  
-    
-  "@mui/material": "^5.14.18",
-  
-    
-  "axios": "^1.6.2",
-  
-    
-  "dotenv": "^16.3.1",
-  
-    
-  "flowbite": "^2.2.0",
-  
-    
-  "flowbite-react": "^0.6.4",
-  
-    
-  "framer-motion": "^10.16.5",
-  
-    
-  "lucide-react": "^0.292.0",
-  
-    
-  "notistack": "^2.0.8",
-  
-    
-  "react": "^18.2.0",
-  
-    
-  "react-dom": "^18.2.0",
-  
-    
-  "react-router-dom": "^6.19.0"
-  
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@material-tailwind/react": "^2.1.4",
+    "@mui/material": "^5.14.18",
+    "axios": "^1.7.7",
+    "dotenv": "^16.3.1",
+    "flowbite": "^2.2.0",
+    "flowbite-react": "^0.6.4",
+    "framer-motion": "^10.16.5",
+    "lucide-react": "^0.292.0",
+    "notistack": "^2.0.8",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.19.0",
+    "todo-app-react": "file:"
   },
-  
   "devDependencies": {
-  
-    
-  "@types/react": "^18.2.37",
-  
-    
-  "@types/react-dom": "^18.2.15",
-  
-    
-  "@vitejs/plugin-react": "^4.2.0",
-  
-    
-  "autoprefixer": "^10.4.16",
-  
-    
-  "eslint": "^8.53.0",
-  
-    
-  "eslint-plugin-react": "^7.33.2",
-  
-    
-  "eslint-plugin-react-hooks": "^4.6.0",
-  
-    
-  "eslint-plugin-react-refresh": "^0.4.4",
-  
-    
-  "postcss": "^8.4.31",
-  
-    
-  "tailwindcss": "^3.3.5",
-  
-    
-  "vite": "^5.0.0"
-  
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
+    "@vitejs/plugin-react": "^4.2.0",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.53.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.4",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
+    "vite": "^5.0.0"
   }
 }
