--- a/Server/vercel.json
+++ b/Server/vercel.json
@@ -1,7 +1,8 @@
 {
+  "installCommand": "npm install --legacy-peer-deps",
   "version": 2,
 
-  "builds": [{ "src": "./Server.js", "use": "@vercel/node" }],
+  "builds": [{ "src": "index.js", "use": "@vercel/node" }],
   "routes": [
     {
       "src": "/(.*)",
