--- a/Server/vercel.json
+++ b/Server/vercel.json
@@ -1,12 +1,11 @@
 {
-  "installCommand": "npm install --legacy-peer-deps",
   "version": 2,
 
   "builds": [{ "src": "index.js", "use": "@vercel/node" }],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/"
+      "dest": "index.js"
     }
   ]
 }
